--- a/ml/requirements.txt
+++ b/ml/requirements.txt
@@ -1,6 +1,8 @@
 numpy==1.19.5
 Pillow==8.3.1
+matplotlib==3.3.4
 torch==1.9.0
 torchvision==0.10.0
 transformers==4.9.2
 wandb==0.12.2
+Cython==0.29.24
